samples/_failures_safe/1761630132_49c74f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c16ade9.c: In function ‘main’:
./samples/SAFE/__tmp_0c16ade9.c:161:5: error: expected declaration or statement at end of input
  161 |     for (size_t i = 0; i < compressed_size; i++) {
      |     ^~~
./samples/SAFE/__tmp_0c16ade9.c:161:5: error: expected declaration or statement at end of input
